--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="container">
                 <p class="pfont center">Follow us on:</br> <a class="white-text text hvr-float-shadow phead" href="https://www.facebook.com" target="_blank"> <img src="./css/images/index/Facebook5.png" alt="HomeDoctorMidsFacebookLink" width="40"></a>
 
-                    <a class="white-text text hvr-float-shadow phead" href="https://uk.linkedin.com/" target="_blank"> <img src="./css/images/index/linkedin5.png" alt="Home Doctor Linked Link" width="40"></a>
+                    <a class="white-text text hvr-float-shadow phead" href="https://uk.linkedin.com/" target="_blank"> <img src="./css/images/index/Linkedin.png" alt="Home Doctor Linkedin Link" width="40"></a>
 
                     <a class="hvr-float-shadow phead"> <a class="white-text text hvr-float-shadow phead" href="#Contact"> <img src="./css/images/index/Email5.png" alt="Home Doctor Contact" width="40"></a> </a>
                 </p>
